# InstaDown

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: installers.yml
scripts/: install.ps1  install.sh
src/: main.rs
