[package]
name = "instadown"
version = "0.1.0"
edition = "2024"
description = "A fast, polished Instagram post and reel downloader"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
console = "0.16"
indicatif = "0.18"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "brotli", "gzip", "rustls-tls", "zstd"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20"
url = "2.5"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
